fix(comp:*): footer buttons aren't aligned when loading (#1306)

--- a/packages/components/date-picker/style/index.less
+++ b/packages/components/date-picker/style/index.less
@@ -17,7 +17,9 @@
     }
 
     &-footer {
-      text-align: end;
+      display: flex;
+      justify-content: flex-end;
+      align-items: center;
       border-top: @date-picker-overlay-footer-border-width @date-picker-overlay-footer-border-style
         @date-picker-overlay-footer-border-color;
       padding: @date-picker-overlay-footer-padding;
@@ -73,7 +75,9 @@
     }
 
     &-footer {
-      text-align: end;
+      display: flex;
+      justify-content: flex-end;
+      align-items: center;
       border-top: @date-range-picker-overlay-footer-border-width @date-range-picker-overlay-footer-border-style
         @date-range-picker-overlay-footer-border-color;
       padding: @date-range-picker-overlay-footer-padding;
