--- a/packages/components/drawer/style/index.less
+++ b/packages/components/drawer/style/index.less
@@ -59,6 +59,8 @@
   }
 
   &-footer {
+    display: flex;
+    align-items: center;
     padding: var(--ix-spacing-md) var(--ix-spacing-lg);
 
     .@{button-prefix} + .@{button-prefix} {
